Add Network Status Handler
