# core/src/main/java/com/radixdlt/api/core/generated/models/NetworkSyncStatusResponse.java
@@ -1,0 +1,150 @@
+/*
+ * Babylon Core API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.radixdlt.api.core.generated.models;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.radixdlt.api.core.generated.models.Peer;
+import com.radixdlt.api.core.generated.models.SyncStatus;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.util.ArrayList;
+import java.util.List;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * NetworkSyncStatusResponse
+ */
+@JsonPropertyOrder({
+  NetworkSyncStatusResponse.JSON_PROPERTY_SYNC_STATUS,
+  NetworkSyncStatusResponse.JSON_PROPERTY_PEERS
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class NetworkSyncStatusResponse {
+  public static final String JSON_PROPERTY_SYNC_STATUS = "sync_status";
+  private SyncStatus syncStatus;
+
+  public static final String JSON_PROPERTY_PEERS = "peers";
+  private List<Peer> peers = new ArrayList<>();
+
+
+  public NetworkSyncStatusResponse syncStatus(SyncStatus syncStatus) {
+    this.syncStatus = syncStatus;
+    return this;
+  }
+
+   /**
+   * Get syncStatus
+   * @return syncStatus
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_SYNC_STATUS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public SyncStatus getSyncStatus() {
+    return syncStatus;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_SYNC_STATUS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setSyncStatus(SyncStatus syncStatus) {
+    this.syncStatus = syncStatus;
+  }
+
+
+  public NetworkSyncStatusResponse peers(List<Peer> peers) {
+    this.peers = peers;
+    return this;
+  }
+
+  public NetworkSyncStatusResponse addPeersItem(Peer peersItem) {
+    this.peers.add(peersItem);
+    return this;
+  }
+
+   /**
+   * List of peers of the node.
+   * @return peers
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "List of peers of the node.")
+  @JsonProperty(JSON_PROPERTY_PEERS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public List<Peer> getPeers() {
+    return peers;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_PEERS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setPeers(List<Peer> peers) {
+    this.peers = peers;
+  }
+
+
+  /**
+   * Return true if this NetworkSyncStatusResponse object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    NetworkSyncStatusResponse networkSyncStatusResponse = (NetworkSyncStatusResponse) o;
+    return Objects.equals(this.syncStatus, networkSyncStatusResponse.syncStatus) &&
+        Objects.equals(this.peers, networkSyncStatusResponse.peers);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(syncStatus, peers);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class NetworkSyncStatusResponse {\n");
+    sb.append("    syncStatus: ").append(toIndentedString(syncStatus)).append("\n");
+    sb.append("    peers: ").append(toIndentedString(peers)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
