# core/src/main/java/com/radixdlt/api/core/generated/models/Peer.java
@@ -1,0 +1,109 @@
+/*
+ * Babylon Core API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.radixdlt.api.core.generated.models;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * Peer
+ */
+@JsonPropertyOrder({
+  Peer.JSON_PROPERTY_PEER_ID
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class Peer {
+  public static final String JSON_PROPERTY_PEER_ID = "peer_id";
+  private String peerId;
+
+
+  public Peer peerId(String peerId) {
+    this.peerId = peerId;
+    return this;
+  }
+
+   /**
+   * Get peerId
+   * @return peerId
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_PEER_ID)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getPeerId() {
+    return peerId;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_PEER_ID)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setPeerId(String peerId) {
+    this.peerId = peerId;
+  }
+
+
+  /**
+   * Return true if this Peer object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    Peer peer = (Peer) o;
+    return Objects.equals(this.peerId, peer.peerId);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(peerId);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class Peer {\n");
+    sb.append("    peerId: ").append(toIndentedString(peerId)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
